[tool.poetry]
name = "movemate"
version = "0.1.0"
description = "website for moving"
authors = ["kennedy munyaga mwai <kennedy.mwai@student.moringaschool.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
